--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!assets/|locales/|.*\\..*).*)",
       "destination": "/index.html"
     }
   ]
